syntax = "proto3";
package stream.api.dial;

// Config configures the dial controller.
message Config {
  // PeerId is the remote peer ID to dial.
  string peer_id = 1;
  // LocalPeerId is the peer ID to dial with.
  // Can be empty to accept any loaded peer.
  string local_peer_id = 2;
  // ProtocolId is the protocol ID to dial with.
  string protocol_id = 3;
  // TransportId constrains the transport ID to dial with.
  // Can be empty.
  uint64 transport_id = 4;
}
