syntax = "proto3";
package stream.srpc.server;

// Config configures the server for the srpc service.
message Config {
  // PeerIds are the list of peer IDs to listen on.
  // If empty, allows any incoming peer id w/ the protocol id.
  repeated string peer_ids = 1;
}
